------------------------------------------------------------------------------------------------------------------------

BACKEND
    Added: Support for .timer unit files (Systemd init provider)
    Added: Distribution packages manager (backported from 1.6.x branch)
    Enhancement: Make it possible to reconfigure many items at once by passing comma separated list of items (iMSCP::Getopt)
    Fixed: Do not enforce routable IP addresses in DNS zone files, let's the administrator choose
    Fixed: Use of uninitialized value in bitwise or ( |) (PHP memory_limit, Subdomain module)
    Fixed: Make sure that units are not masked when enabling them (Systemd service provider)
    Fixed: Resolve units before acting on them due to https://github.com/systemd/systemd/issues/7875 (Systemd service provider)

CONFIG
    Added: Missing LOGROTATE(8) for SYSLOG-NG(8) which can be installed on some system in place of RSYSLOGD(8) (Fix backported from 1.6.x branch)
    Added: Specific LOGROTATE(8) configuration file for rsyslog (Ubuntu 14.04/Trusty Thar; Fix backported from 1.6.x branch)
    Fixed: Bad value for X-Forward-* headers (Proxy feature / Apache2 ssl vhosts; Fix backported from 1.6.x branch)
    Fixed: Enforce TLS v1.2 as older versions are not longer considered safe (Apache2)
    Security: Protect both /var/www/virtual and /var/www/imscp directories from full access (Apache2)
    Review: SSL parameters for both Apache2 and Nginx Web servers (cipher suite)
    Review: Do not discard paths other than '/errors/' and '/.well-known/acme-challenge/' on redirect/proxy (Apache2)

CONTRIB
    Added: i-MSCP Slave Server Provisioning client (contrib/scripts/named_slave_provisioning_client.pl)
    Enhancement: Make it possible to setup DB zone file format (Slave DNS server - 10_named_slave_provisioning.pl listener file)
    Fixed: Possible duplicate DNS zone entry leading to server crash (Slave DNS server - 10_named_slave_provisioning.pl listener file)